@@ -4,6 +4,8 @@
 
 	* Spelling correction in README - thanks Scott McDermott
 
+	* Renamed getline (Problem only reported on Ubuntu)
+
 2009-02-11 Simon Waters <simon-gnu@technocool.net>
 
 	* Ensure check_board prevents invalid positions being analyzed.
